[FIX?] used different css to wrap sequences

--- a/app/assets/styles/jobview.css
+++ b/app/assets/styles/jobview.css
@@ -38,7 +38,8 @@ body.is-reveal-open {
 }
 .wrap{
     white-space: unset;
-    word-wrap: break-word !important;
+    display: inline-block;
+    word-break: break-all;
 }
 
 
